--- a/index.ipynb
+++ b/index.ipynb
@@ -317,15 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if (restaurant['rating'] > alternative['rating']):\n",
     "        return true\n",
-    "    else\n",
-    "        return false"
+    "    else:\n",
+    "        return false\n",
+    "    "
    ]
   },
   {
