--- a/index.ipynb
+++ b/index.ipynb
@@ -405,12 +405,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if (len(restaurant['price']) < len(alternative['price']):\n",
+    "    if (len(restaurant['price']) < len(alternative['price'])):\n",
     "        return True\n",
     "    else:\n",
     "        return False"
