--- a/index.ipynb
+++ b/index.ipynb
@@ -485,12 +485,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if (restaurant['rating'] >):\n",
+    "    if (restaurant['rating'] >= rating):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
